spacing fix 2

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,7 @@ body {
     flex-direction: column;
     padding: 5%;
 }
+
+#addonStyle {
+    margin-bottom: 0;
+}
